# website-tracker

./: .coverage  .gitignore  .replit  README.md  change_detector.py  change_scorer.py  change_summarizer.py  changes.json  data_manager.py  diff_visualizer.py  main.py  mkdocs.yml  notifier.py  pyproject.toml  replit.nix  scraper.py  screenshot_manager.py  test_change_detector.py  test_diff.py  test_screenshot.py  timeline_visualizer.py  user_preferences.json  website_config.json
.github/: dependabot.yml
.github/workflows/: docs.yml  pages.yml  release.yml  test.yml
.streamlit/: config.toml
attached_assets/: Pasted-NotFoundError-Failed-to-execute-removeChild-on-Node-The-node-to-be-removed-is-not-a-child-of-t-1738129413768.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-diff-v-1737988984580.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-timeli-1737990282891.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-timeli-1737994802455.txt
docs/: index.md
docs/api/: change-detection.md  index.md  timeline.md
docs/development/: architecture.md  contributing.md
docs/guide/: change-detection.md  configuration.md  getting-started.md  monitoring.md
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/api/change-detection/: index.html
site/api/timeline/: index.html
site/development/architecture/: index.html
site/development/contributing/: index.html
site/search/: search_index.json
(+4 files in other folders)
