[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "diff-match-patch>=20241021",
    "mkdocs-material>=9.5.50",
    "mkdocstrings[python]>=0.27.0",
    "openai>=1.60.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
]
